--- a/todo.txt
+++ b/todo.txt
@@ -1,37 +1,1 @@
-i also want to support advanced options like the ones in the https://docupub.com/pdfcompress/ website.
-
-Color Images:    	
-Compression:		
-Quality:
-
-JPEG    
-35
- (0..100)
-
-Gray Images:    	
-Compression:		
-Quality:
-
-JPEG    
-35
- (0..100)
-
-Mono Images:    	
-Compression:		
-Quality:
-
-JBIG2 lossy
-5
- (0..10)
-
-
-
-[TODO]:
-    add a loader to the file selector before app loads.
-
-
-remain the options.
-
-fix cta style.
-
-synced errors & fix back-btn style
+fix styling.
