--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,7 @@
-fix styling.
+fix the md-viewer & update the options then integrate backend & fix it then deploy.
+
+fix the md-viewer SEO & add normalize.css & namespace the wrapper only.
+
+then get back to misc-tools fix the text-to-pdf route then implement premium-tools for those & finally depoloy.
+
+then fix the pdf editor.
